--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Titulo </title>
+     <title> Hola Mundo </title>
 </head>
 <body>
      <ul>
-         <li> Lista </li>
+         <li> Hola Mundo </li>
      </ul>
 </body>
 </html>
